# logpp

./: .gitignore  CMakeLists.txt  logpp.cc  logpp.hh
cmake/: LogPPConfig.cmake
